--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -109,7 +109,7 @@
         <!-- Pestaña para gestionar reservas -->
         <mat-tab label="{{ 'RESERVATION_REDB_TAB' | oTranslate }}">
             <o-grid #formReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"               
-                columns="name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date" query-rows="8"
+                columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date" query-rows="8"
                 refresh-button="no" quick-filter="true" visible-columns="name_host;message;status_name;reservation_date" [cols]="1"
                 grid-item-height="50px" gutter-size="1px">
                 <o-grid-item *ngFor="let list of formReservationReceived.dataArray">
@@ -118,7 +118,7 @@
                     <o-column layout-padding fxFlex="55" class="travelerMsg">Mensaje: {{ list.message }}</o-column>
                     <o-column layout-padding fxFlex="15" class="date">Fecha: {{ list.reservation_date | date: 'dd/MM/yyyy' }} </o-column>
                     <o-column layout-padding fxFlex="15" class="status">Status: {{ list.status_name }}</o-column>
-                    <o-column layout-padding fxFlex="5" class="show" (click)="verReserva()"><mat-icon class="icon"
+                    <o-column layout-padding fxFlex="5" class="show" (click)="verReservaRec(list.id_reservation)"><mat-icon class="icon"
                             svgIcon="ontimize:visibility"></mat-icon></o-column>
                     <!-- <div><button mat-raised-button color="accent" fxFlex="25" (click)="verReserva()">ver</button></div> -->
 
@@ -138,7 +138,7 @@
                     {{list.surname_host}}</o-column>
                 <o-column layout-padding fxFlex="55" class="travelerMsg">Mensaje: {{ list.message }}</o-column>
                 <o-column layout-padding fxFlex="15" class="date">Fecha: {{ list.reservation_date | date: 'dd/MM/yyyy'  }}</o-column>
-                <o-column layout-padding fxFlex="5" class="show" (click)="verReserva(list.id_reservation)"><mat-icon class="icon"
+                <o-column layout-padding fxFlex="5" class="show" (click)="verReservaSent(list.id_reservation)"><mat-icon class="icon"
                         svgIcon="ontimize:visibility"></mat-icon></o-column>
 
                
