--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.html
@@ -1,12 +1,13 @@
 <div class="dialog">
-    <div class="text1">
+    <p class="title">{{ 'RESERV_DIALOG_MSG' | oTranslate }}</p>
+   
         <!-- <p>Reserva una fecha y escribe un mensaje a la anfitriona para comprobar su disponibilidad</p> -->
-        <p>Indica una fecha para conocer a la anfitriona y hacer un tour por su ciudad</p>
-    </div>
+        
+   
     <o-form #form show-header="no" show-header-navigation="no" layout-direction="column">
         <o-date-input #date attr="date" label="{{ 'DATE' | oTranslate }}" read-only="no" required="yes"
-            fxFlex="90"></o-date-input>
-        <o-textarea-input #message attr="message" label="{{ 'MESSAGE' | oTranslate }}" fxFlex="90"
+            fxFlex="60"></o-date-input>
+        <o-textarea-input #message attr="message" label="{{ 'MESSAGE' | oTranslate }}" fxFlex="70"
             max-length="250"></o-textarea-input>
         <o-button class="send" type="RAISED" label="SEND" layout-padding color="accent"
             (onClick)="sendReservation()"></o-button>
