WIP Boton crear en registro
Boton crear añadido con metodo pero sin funcionalidad para guardar en BD.
Boton volver en registro.

--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -93,7 +93,7 @@
                         class="input-padding" required="yes" sort="ASC" searchable="true"></o-combo>
                     <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="80" required="yes"
                         max-length="15"></o-text-input>
-                    <o-email-input attr="email" label="EMAIL" placeholder="example@example.com" fxFlex="80"
+                    <o-email-input attr="email" label="EMAILCONT" placeholder="example@example.com" fxFlex="80"
                         required="yes"></o-email-input>
                     <o-nif-input attr="nif" label="NIF" required="yes" fxFlex="80" required="yes"
                         max-length="25"></o-nif-input>
