--- a/Front/src/app/register/register/register.component.html
+++ b/Front/src/app/register/register/register.component.html
@@ -1,3 +1,43 @@
+<div class="container">
+  <div class="box">
+    <div class="box1">
+      <p class="text">
+        <span>Tu viaje empieza aquí!</span><br>
+        <span>Rellena el formulario de registro</span><br>
+        <span>y únete al club de viajeras</span>
+    </div>
+    <div class="box2">
+      <o-form #formregister [formGroup]="form" service="register" query-on-init="no" entity="register" keys="user_"
+        ignore-on-exit="passwordConfirm">
+        <!-- (onInsert)="goToLogin()" Esto estaba en el form pero creo que ya no hace falta. Ahora está en el onclick del boton crear.-->
+        <o-text-input attr="name" label="NAME" fxFlex="100" required="yes" max-length="20"></o-text-input>
+        <o-text-input attr="surname" label="SURNAME" fxFlex="100" required="yes" max-length="30"></o-text-input>
+        <o-email-input attr="user_" label="{{ 'Register email' | oTranslate }}" placeholder="example@example.com"
+          fxFlex="100" required="yes"></o-email-input>
+
+        <o-password-input attr="password" label="PASSWORD" fxFlex="100" required="yes" label="PASSWORD"
+          show-password-button="yes" [validators]="validatorsArray" (input)="onPasswordInput()">
+          <o-validator [error-name]="'passwordNotSize'" [error-text]="'ERROR_PASS'"></o-validator>
+        </o-password-input>
+
+        <o-password-input attr="passwordConfirm" fxFlex="100" *ngIf="isPasswordModified"
+          label="{{ 'Confirm password' | oTranslate }}" show-password-button="yes" [validators]="validatorsArray">
+          <o-validator [error-name]="'passwordNotMatched'" [error-text]="'ERROR_MATCH'"></o-validator>
+        </o-password-input>
+        <div fxLayout="column" fxLayoutAlign="space-evenly center" fxFlex="100">
+          <!-- <a [routerLink]="['/login']"> -->
+            <o-button type="RAISED" label="CREATEBTN" layout-padding color="accent" icon="person_add"
+              (onClick)="saveUserInDataBase()"></o-button>
+          <!-- </a> -->
+        </div>
+        <a [routerLink]="['/login']">
+          <o-button type="RAISED" label="BACKBTN" layout-padding color="accent" icon="arrow_back"></o-button>
+        </a>
+      </o-form>
+    </div>
+  </div>
+</div>
+
 <!-- 
 <div class="container">
   <div class="text">
@@ -34,44 +74,3 @@
     </o-form>
   </div>
 </div> -->
-
-
-
-
-
-
-<div class="container">
-  <div class="box">
-    <div class="box1">
-      <p class="text">
-        <span>Tu viaje empieza aquí!</span><br>
-        <span>Rellena el formulario de registro</span><br>
-        <span>y únete al club de viajeras</span>
-    </div>
-    <div class="box2">
-      <o-form [formGroup]="form" service="register" query-on-init="no" entity="register" keys="user_"
-        ignore-on-exit="passwordConfirm" (onInsert)="goToLogin()">
-        <o-text-input attr="name" label="NAME" fxFlex="100" required="yes" max-length="20"></o-text-input>
-        <o-text-input attr="surname" label="SURNAME" fxFlex="100" required="yes" max-length="30"></o-text-input>
-        <!-- <mat-form-field attr="email" fxFlex="100">
-          <input matInput placeholder="{{ 'Register email' | oTranslate }}" formControlName="user_" required="yes">
-          <mat-error *ngIf="form.get('user_').hasError('email')">
-            ¡Introduce un email válido!
-          </mat-error>
-        </mat-form-field> -->
-        <o-email-input attr="user_" label="{{ 'Register email' | oTranslate }}" placeholder="example@example.com" fxFlex="100" required="yes" ></o-email-input>
-
-
-        <o-password-input attr="password" label="PASSWORD" fxFlex="100" required="yes" label="PASSWORD"
-          show-password-button="yes" [validators]="validatorsArray" (input)="onPasswordInput()">
-          <o-validator [error-name]="'passwordNotSize'" [error-text]="'ERROR_PASS'"></o-validator>
-        </o-password-input>
-
-        <o-password-input attr="passwordConfirm" fxFlex="100" *ngIf="isPasswordModified"
-          label="{{ 'Confirm password' | oTranslate }}" show-password-button="yes" [validators]="validatorsArray">
-          <o-validator [error-name]="'passwordNotMatched'" [error-text]="'ERROR_MATCH'"></o-validator>
-        </o-password-input>
-      </o-form>
-    </div>
-  </div>
-</div>
