--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -108,11 +108,11 @@
 
         <!-- Pestaña para gestionar reservas -->
         <mat-tab label="{{ 'RESERVATION_REDB_TAB' | oTranslate }}">
-            <o-grid #formReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"               
+            <o-grid #gridReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"               
                 columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date" query-rows="8"
                 refresh-button="no" quick-filter="true" visible-columns="name_host;message;status_name;reservation_date" [cols]="1"
                 grid-item-height="50px" gutter-size="1px">
-                <o-grid-item *ngFor="let list of formReservationReceived.dataArray">
+                <o-grid-item *ngFor="let list of gridReservationReceived.dataArray">
                     <o-column layout-padding fxFlex="20" class="travelerName">De: {{ list.name_traveler}}
                         {{list.surname_travaler}}</o-column>
                     <o-column layout-padding fxFlex="55" class="travelerMsg">Mensaje: {{ list.message }}</o-column>
@@ -129,11 +129,11 @@
                 <!-- Pestaña para gestionar reservas enviadas 2 -->
 
         <mat-tab label="{{ 'RESERVATION_SENT_TAB' | oTranslate }}">
-        <o-grid #formReservationSent attr="reservationSent" service="users" entity="reservationSent" 
+        <o-grid #gridReservationSent attr="reservationSent" service="users" entity="reservationSent" 
             columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date" query-rows="8"
             refresh-button="no" quick-filter="true" visible-columns="name_host;message;status_name;reservation_date" [cols]="1"
             grid-item-height="50px" gutter-size="1px">
-            <o-grid-item *ngFor="let list of formReservationSent.dataArray">
+            <o-grid-item *ngFor="let list of gridReservationSent.dataArray">
                 <o-column layout-padding fxFlex="20" class="travelerName">Para: {{ list.name_host }}
                     {{list.surname_host}}</o-column>
                 <o-column layout-padding fxFlex="55" class="travelerMsg">Mensaje: {{ list.message }}</o-column>
