HOTFIX Boton crear en registo
Cambiado routerlink en html por router.navigate en ts
(Sigue funcionando regular :s)

--- a/Front/src/app/register/register/register.component.html
+++ b/Front/src/app/register/register/register.component.html
@@ -24,10 +24,10 @@
           <o-validator [error-name]="'passwordNotMatched'" [error-text]="'ERROR_MATCH'"></o-validator>
         </o-password-input>
         <div fxLayout="column" fxLayoutAlign="space-evenly center" fxFlex="100">
-          <a [routerLink]="['/login']">
-            <o-button type="RAISED" label="CREATEBTN" layout-padding color="accent" icon="person_add"
-              (onClick)="saveUserInDataBase()"></o-button>
-          </a>
+          <!-- <a [routerLink]="['/login']"> Esto da problemas porque el routerlink está por encima del button, entonces no hace la accion del button porque no llegas a pulsarlo, solo la del routerlink-->
+          <o-button type="RAISED" label="CREATEBTN" layout-padding color="accent" icon="person_add"
+            (onClick)="saveUserInDataBase()"></o-button>
+          <!-- </a> -->
         </div>
         <a [routerLink]="['/login']">
           <o-button type="RAISED" label="BACKBTN" layout-padding color="accent" icon="arrow_back"></o-button>
