--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
@@ -1,14 +1,23 @@
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
-        <p>{{name_traveler}} {{surname_traveler}} Fecha reserva:{{reservation_date | date: 'dd/MM/yyyy'}}</p>
-        <p>{{name_host}} {{surname_host}}</p>
+        <p>{{name_traveler}} {{surname_traveler}}</p>
+        <p>Fecha reserva:{{reservation_date | date: 'dd/MM/yyyy'}}</p>
+        
+        <p>{{message}}</p>
         <p>{{message_answer}}</p>
-        <p>{{message}}</p>        
-        <p *ngIf="id_status == 1">{{phonenumber_host}} {{email_host}}</p>
-        <p>{{ 'STATUS_N' | oTranslate }} : {{status_name}}</p>
-        <o-textarea-input attr="message_answer" label="Mensaje" fxFlex="70" max-length="200"></o-textarea-input>
-        <div>
+        
+        <o-textarea-input *ngIf="id_status == 3" attr="message_answer" label="Mensaje" fxFlex="70" max-length="200"></o-textarea-input>
+
+
+      
+        <p *ngIf="id_status == 1">Has aceptado la reserva y {{name_traveler}} tiene tus datos de contacto</p>
+         
+        <p *ngIf="id_status == 2">Has rechazado la reserva. Otra vez será!</p>
+        
+       
+       
+        <div *ngIf="id_status == 3">
             <o-button class="reject" type="RAISED" label="REJECT" layout-padding color="accent"
             (onClick)="rejectReservation(id_reservation)"></o-button>
             <o-button class="accept" type="RAISED" label="ACCEPT" layout-padding color="accent"
