--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -1,34 +1,71 @@
-<div fxFill fxLayout="column" fxLayoutAlign="start">
+<o-form #form fxFill show-header="no">
 
-  <div class="header-title">¿Dónde quieres ir?</div>
+  <h1 class="community-title">¿Dónde quieres ir?</h1>
 
-  <!-- <o-combo attr="id_community" label="COMMUNITY" service="communities" entity="community"
-    keys="id_community" columns="community_name;id_community" visible-columns="community_name"
-    value-column="id_community" class="input-padding" sort="ASC" searchable="true" fxFlex="30"></o-combo> -->
+  <div class="filter-style" fxLayout="column">
+    <div fxLayout="row wrap" fxLayoutGap="32px" class="buttons-container">
+        <!-- Combo para Comunidades -->
+        <o-combo attr=community_name service="communities" entity="community" keys="id_community"
+                columns="id_community;community_name" value-column="community_name" visible-columns="community_name"
+                read-only="no" class="input-combo" fxFlex="25%" sort="ASC" searchable="true">
+        </o-combo>
+        <!-- Combo para Provincias -->
+        <o-combo attr=province_name service="provinces" entity="province" keys="id_province"
+                columns="province_name;id_province" value-column="province_name" visible-columns="province_name"
+                read-only="no" class="input-combo" fxFlex="25%" searchable="true">
+        </o-combo>
+        <!-- Checkbox para anfitrionas -->
+        <div fxLayout="row" fxLayoutAlign="start center" class="input-checkbox" fxFlex="25%">
+          <o-checkbox attr="host_available" label="Anfitrionas Disponibles">
+          </o-checkbox>
+        </div>
 
-  <o-grid #grid columns="id_community;community_name" service="communities" entity="community"
-    keys="id_community" [cols]="5" quick-filter-columns="community_name" show-page-size="false" page-size-options="4;8;16" refresh-button="false"
-    pagination-controls="true" gutter-size="1px" [ngStyle]="{'height':'600px'}">
+        <!-- Botones del filtro -->
+        <div class="buttons-container">
+          <o-button attr="filter-button" icon="search" type="STROKED" class="input-search" [oFilterBuilderQuery]="filterBuilder"
+                    fxFlex="5%" color="primary">
+          </o-button>
+          <o-button attr="clear-button" icon="delete" type="STROKED" class="input-clear" [oFilterBuilderClear]="filterBuilder"
+                    xFlex="5%" color="primary">
+          </o-button>
+        </div>
+    </div>
+  </div>
+  <!-- oFilterBuilder para el filtrado -->
+  <o-filter-builder #filterBuilder attr="thefilter" filters="community_name;province_name"
+                    [target]="grid" query-on-change="no" [expression-builder]="createFilter">
+  </o-filter-builder>
 
-    <o-grid-item class="communityCard" *ngFor="let list of grid.dataArray">
-      <o-column class="container-item">
-        <a routerLink="{{ list.id_community }}">
-          <o-image class="community-image" attr="community_image" data="{{ getImagePath(list.community_name) }}"
-            read-only="true" show-controls="false"></o-image>
-        </a>
-        <div class="community-name">{{ list.community_name }}</div>
-      </o-column>
-    </o-grid-item>
-    <o-grid-item class="communityCard">
-      <o-column class="container-item">
-        <a [routerLink]="['/main/towns']">
-          <o-image class="community-image" attr="community_all" data="{{ getImageAllComumunity('all_communities') }}"
-            read-only="true" show-controls="false"></o-image>
-        </a>
-        <div class="community-name">Todas las ciudades</div>
-      </o-column>
-    </o-grid-item>
+  
+    <o-grid #grid columns="id_community;community_name;province_name" service="communities" entity="community"
+      keys="id_community" [cols]="5" quick-filter="no" show-page-size="false" page-size-options="4;8;16"
+      grid-item-height="1:1" refresh-button="false" pagination-controls="true" gutter-size="10px"
+      [ngStyle]="{'height':'800px'}" >
+      
+      <div class="grid-container">
+        <o-grid-item class="communityCard" *ngFor="let list of grid.dataArray">
+          <o-column>
+            <div class="image">
+              <a routerLink="{{ list.id_community }}">
+                <img [src]="getImagePath(list.community_name)" alt="{{ list.community_name }}" class="community-image">
+              </a>
+            </div>
+            <div class="community-name">{{ list.community_name }}</div>
+          </o-column>
+        </o-grid-item>
 
-  </o-grid>
+        <o-grid-item class="communityCard">
+          <o-column>
+            <div class="image">
+            <a [routerLink]="['/main/towns']">
+              <img src="{{ getImageAllComumunity('all_communities') }}" alt="Texto alternativo" class="community-image">
+            </a>
+            </div>
+            <div class="community-name">Todas las ciudades</div>
+          </o-column>
+        </o-grid-item>
+      </div>
 
-</div>
+    </o-grid>
+  
+</o-form>
