--- a/Front/src/app/main/home/home.component.html
+++ b/Front/src/app/main/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <img class="background" src="../../../assets/images/foto_home.jpg">
   <img class="logo" src="../../../assets/images/logo300.png" alt="logo">
+  <img class="steps" src="../../../assets/images/steps.png" alt="steps">
 
 </div>
