--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
@@ -34,14 +34,38 @@ box-sizing: border-box;
 }
 
 
-.travelerName{
+.bandeja{
+    font-family: 'Patua One', sans-serif;
+    font-size: 30px;
+    color: #341777;
+    margin: 20px;
+}
+.container{
+    width: 1000px;
+    height: auto;
+}
+
+.name-msg{
     background-color: rgb(45, 13, 120);
+    
     color: white;
     font-size: small;
 }
-.travelerMsg{
-    background-color: rgb(244, 240, 240); 
-    font-size: small;
+.name{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 15px;
+}
+.dateT{
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: right;
+
+}
+.tour{
+    text-align: right;
 }
 
 .date{
@@ -50,10 +74,37 @@ box-sizing: border-box;
     font-size: small;
 }
 
-.show{
-    background-color: rgb(244, 240, 240);
+.status{
+    background-color: rgb(222, 215, 237);
+    color: rgb(45, 13, 120);
+    text-align: right;
+    font-size: small;
+}
+.statusS{
+    text-align: right;
+}
+.statusT{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: right;
+
+}
+.buttonVer{
+    background-color: rgb(229, 225, 237);
+    color: rgb(45, 13, 120);
+    text-align: center;
+    font-size: small;
+}
+.iconE{
+    color: transparent;   
+}
+.iconA{
+    font-weight: bold;
+    font-size: 15px; 
     
 }
-mat-icon{
-    height: 20px;
-}
+
+
+
