--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -1,9 +1,8 @@
+<a [routerLink]="['../../communities']">
+  <button mat-flat-button> < {{'BACKBTN' | oTranslate}}</button>
+</a>
 <div fxFill fxLayout="column" fxLayoutAlign="start">
   
-  <a [routerLink]="['../../communities']">
-    <o-button type="RAISED" label="BACKBTN" layout-padding color="accent" icon="arrow_back"></o-button>
-  </a>
-
   <o-grid #grid columns="id_town;town_name;province_name" quick-filter-columns="town_name;province_name" service="towns"
     entity="town" keys="id_town" [cols]="6" show-page-size="false" page-size-options="4;8;16" refresh-button="false"
     pagination-controls="true" gutter-size="15px" [ngStyle]="{'height':'600px'}">
@@ -21,3 +20,6 @@
 
   </o-grid>
 </div>
+<a [routerLink]="['../../communities']">
+  <button mat-flat-button> < {{'BACKBTN' | oTranslate}}</button>
+</a>
