--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
@@ -1,27 +1,31 @@
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
-        <p>{{name_traveler}} {{surname_traveler}}</p>
-        <p>Fecha reserva:{{reservation_date | date: 'dd/MM/yyyy'}}</p>
-        
+        <div class="boxes">
+        <div class="box1">
+            <div class="name"><p>{{name_traveler}} {{surname_traveler}}</p></div>
+            <div class="date"><p>Fecha reserva:{{reservation_date | date: 'dd/MM/yyyy'}}</p></div>
+        </div>
+
         <p>{{message}}</p>
         <p>{{message_answer}}</p>
-        
-        <o-textarea-input *ngIf="id_status == 3" attr="message_answer" label="Mensaje" fxFlex="70" max-length="200"></o-textarea-input>
+
+        <o-textarea-input *ngIf="id_status == 3" attr="message_answer" label="Mensaje" fxFlex="70"
+            max-length="200"></o-textarea-input>
+        </div>
 
 
-      
         <p *ngIf="id_status == 1">Has aceptado la reserva y {{name_traveler}} tiene tus datos de contacto</p>
-         
+
         <p *ngIf="id_status == 2">Has rechazado la reserva. Otra vez será!</p>
-        
-       
-       
+
+
+
         <div *ngIf="id_status == 3">
             <o-button class="reject" type="RAISED" label="REJECT" layout-padding color="accent"
-            (onClick)="rejectReservation(id_reservation)"></o-button>
+                (onClick)="rejectReservation(id_reservation)"></o-button>
             <o-button class="accept" type="RAISED" label="ACCEPT" layout-padding color="accent"
-            (onClick)="acceptReservation(id_reservation)"></o-button>
+                (onClick)="acceptReservation(id_reservation)"></o-button>
         </div>
     </o-form>
 </div>
