--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -1,6 +1,4 @@
-<a [routerLink]="['../../communities']">
-  <button mat-flat-button> < {{'BACKBTN' | oTranslate}}</button>
-</a>
+<button mat-flat-button [routerLink]="['../../communities']"> < {{'BACKBTN' | oTranslate}}</button>
 <div fxFill fxLayout="column" fxLayoutAlign="start">
   
   <o-grid #grid columns="id_town;town_name;province_name" quick-filter-columns="town_name;province_name" service="towns"
@@ -20,6 +18,3 @@
 
   </o-grid>
 </div>
-<a [routerLink]="['../../communities']">
-  <button mat-flat-button> < {{'BACKBTN' | oTranslate}}</button>
-</a>
