--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -1,11 +1,10 @@
+<button mat-flat-button [routerLink]="['../../communities', idcommunity]"> < {{'BACKBTN' | oTranslate}}</button>
 <o-form #form fxFill service="towns" entity="town" keys="id_town" show-header="no" (onDataLoaded)="onLoad()">
     <o-text-input attr="id_town" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
     <o-text-input attr="id_community" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
     <o-text-input #townnamefield attr="town_name" enabled="no" (onValueChange)="reloadValues($event)"
         oHidden></o-text-input>
     <h1 class="town-title">{{ custom_name }}</h1>
-
-    
 
     <o-column-collapsible title="{{ 'FILTERS_HOSTS' | oTranslate }}" appearance="legacy" expanded="no"
         icon="filter_list" class="collapsible">
@@ -65,10 +64,6 @@
         </div>
     </o-grid>
 </o-form>
-
-<a [routerLink]="['../../communities', idcommunity]">
-    <button mat-flat-button> < {{'BACKBTN' | oTranslate}}</button>
-</a>
 
 <!-- <o-list #list attr="list" columns="name;surname;short_desc;avatar" quick-filter-columns="name;short_desc"
 service="users" entity="host" keys="id" parent-keys="id_town" refresh-button="false">
